--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/foto de perfil.jpng" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/foto de perfil.jpg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Ana Julia_</p>
         <h1>Sou estudante do ensino médio</h1>
